--- a/Bstyle.css
+++ b/Bstyle.css
@@ -227,7 +227,7 @@
 .valid {
     transform: translateZ(190px);
     font-size: 15px;
-    font-family: Lemon Milk;
+    font-family: 'Lemon/Milk', sans-serif;
     position: absolute;
     bottom:60px;
     color: white;
