--- a/Bstyle.css
+++ b/Bstyle.css
@@ -8,6 +8,15 @@
     max-width: 100%;
 }
 
+@font-face {
+    font-family:  'VALORANT';
+    src: url("./assets/Font/Valorant\ Font.ttf");
+}
+@font-face {
+    font-family:  'Lemon/Milk';
+    src: url("./assets/Font/LemonMilk.otf");
+}
+
 .navbar {
     box-sizing: border-box;
     color:white;
@@ -508,6 +517,13 @@
         margin: 20px 10px;
     }
         
+    .hero__content {
+        font-size:10px;
+    }
+    .hero__content h4 {
+        line-height:100%;
+        font-size:15px;
+    }
     
 
 }
