--- a/Bstyle.css
+++ b/Bstyle.css
@@ -50,6 +50,7 @@
     align-items: center;
     list-style: none;
     text-align: center; 
+    text-decoration: none;
 }
 .nav__links {
     color: white;
