--- a/Bstyle.css
+++ b/Bstyle.css
@@ -80,11 +80,22 @@
 }
 
 .logo {
+    
     width: 30px;
     margin:0px 10px ;
+    align-items: center;
 
 }
+.logo2 {
+    display: flex;
+    width: 4vmin;
+    
+    align-items: center;
+    justify-content: center;
+    margin-left:15px ;
+    margin-right: 50px;
 
+}
 .nav__btn{
     width: 100%;
     max-width: 100%;
@@ -114,16 +125,27 @@
     margin:0;
     padding:0;
     max-width: 100%;
-    
+}
+.hero.active {
+    margin:0;
+    padding:0;
+    max-width: 100%;
+    filter: blur(1px);
 }
 
-.hero__text {
-
-}
 .hero__container {
     width:100vw;
     height: 100vh;
     
+}
+.hero__container2 {
+    width:100vw;
+    height: 100vh;
+    
+}
+
+.sup {
+    color: black;
 }
 
 .hero__object__container {
@@ -344,14 +366,13 @@
 }
 
 .fooer3 {
-    display:flex;
-    position: static;
-    margin-top:50px;
+    
+    position: absolute;
+    bottom: 0;
+    margin-bottom: 20px;
     opacity: 40%;
     font-size: 10px;
-    justify-content: center;
-    align-items: center;
-    text-align:center;
+    
     
     
 }
@@ -380,15 +401,194 @@
     width:25px;
 }
 
- 
+.hero__content2 p{
+    display:flex;
+    justify-content:center;
+    align-items: center;
+    text-align:center;
+    width: 100%;
+    height:100%;
+    position: absolute;
+    background-color:rgb(56, 56, 55);
+    color: rgb(255, 251, 251);
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.msg {
+    position:fixed;
+    top: 20%;
+    z-index: 999;
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    color: black;
+    width:100%;
+    height:60%;
+    padding: 30px;
+    opacity: 0;
+    z-index:0 ;
+    transform: scale(0.8);
+    transition: all 0.5s ease;
+    
+    
+        
+}
+.msg.active {
+    position:fixed;
+    top: 20%;
+    z-index: 999;
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    color: black;
+    width:100%;
+    height:60%;
+    padding: 30px;
+    opacity: 1;
+    transform: scale(1);
+    transition: all 0.2s ease; 
+    
+    
+        
+}
+
+.msg__box {
+    justify-content:center;
+    background-color:rgb(247, 245, 245);
+    padding: 30px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction:column;
+    box-shadow: 8px 8px 0 rgba(0, 0, 0, 0.2);
+    border: 3px solid black;
+    max-width: 100%;
+    height: auto;
+    
+    
+    
+}
+
+.msg__title {
+    display: flex;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight:bold;
+    font-size:4vmin;
+    text-align:center;
+    justify-content: center;
+    align-items: center;
+    color: black;
+    margin-bottom: 20px;
+    
+}
+
+#mbox {
+    padding:30px;
+    color: black;
+    font-size:20px;
+    width: 100vh; 
+    height: 20vh;
+    justify-content: center;
+    align-items: center;
+    resize: none;
+    border: 3px solid black;
+}
+
+#mbut {
+    align-items: center;
+    color: black;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight:bold;
+    justify-content: center;
+    display: flex;
+    font-size:30px;
+    margin-top: -3px;
+    margin-left: px ;
+    width: 80%;
+    height:50px;
+    transition: all 0.2s;
+    border: 3px solid black;
+    
+}
+
+#mbut:hover {
+    box-shadow: 0.4rem 0.4rem 0 black;
+    transform: translate(-0.4rem, -0.4rem);
+    transition: all 0.2s;
+}
+
+#mbut:active {
+    box-shadow: 0 0 0 black;
+    transform: translate(0, 0);
+  }
+
+#mname {
+    border: 3px solid black;
+    width: 60%;
+    height:50px;
+    position: relative;
+    top: -3px;
+    font-size: 20px;
+    color: black; 
+    resize: none;
+    padding-left:20px;
+    padding-top: 10px;
+}
+
+.align__2 {
+    display: flex;
+}
+
+.close__container {
+    display: flex;
+    justify-content: flex-end;
+    height: 1px;
+    align-items: center;
+    position: relative;
+    top: 20px;
+    
+    
+}
+
+
+
+.close {
+    
+    
+    justify-content: center;
+    width: 35px;
+    height: 30px;
+    opacity: 0.3;
+    display:flex;
+    z-index: 99999;
+    opacity: 1;
+  }
+  .close:before, .close:after {
+    display:flex;
+    z-index: 99999;
+    content: ' ';
+    height: 30px;
+    width: 2px;
+    padding: 1px;
+    background-color: rgb(0, 0, 0);
+  }
+  .close:before {
+    transform: rotate(45deg);
+    position: fixed;
+  }
+  .close:after {
+    transform: rotate(-45deg);
+    position: fixed;
+  }
 /* MOBILE VERSION */
 
 @media screen and (max-width:820px) {
     .nav__container{
         justify-content:space-between;
         max-width: 1300px;
+        background-color: black;
         width: 100%;
         padding: 30px;
+        position:fixed;
         display: flex;
         height: 100px;
         transition: all 0.5s ease;
@@ -438,14 +638,18 @@
     }
     
     #mobile-menu {
-        position: absolute;
-        top: 20%;
+        position: fixed;
+        top: 3%;
         right:5%;
         transform: translate(5%, 20%);
         z-index: 2;
-        
-    
     }
+    #mobile-menu.active {
+        position: fixed;
+        right:59%;
+    }
+
+    
 
     #mobile-menu.is-active .bar:nth-child(2) {
         opacity: 0;
@@ -483,6 +687,9 @@
 
     .object {
         display: flex;
+        margin: 0;
+        top: 22px;
+        left: 38px;
 
     }
 
@@ -512,6 +719,11 @@
         top: 50px;
     }
 
+    .valid3 {
+        right: 30px;
+        top:22px;
+    }
+
     #footer1 {
         margin: 20px 10px;
     }
@@ -523,6 +735,11 @@
         line-height:100%;
         font-size:15px;
     }
+
+    .close__container {
+        top:10px;
+    }
+    
     
 
 }
