--- a/Bstyle.css
+++ b/Bstyle.css
@@ -444,6 +444,7 @@
     width:100%;
     height:60%;
     padding: 30px;
+    padding-bottom: 10px;
     opacity: 1;
     transform: scale(1);
     transition: all 0.2s ease; 
@@ -739,7 +740,13 @@
     .close__container {
         top:10px;
     }
+    #mbox {
+        padding:10px;
+        height: 900px;
+    }
     
     
-
+    .msg__box {
+        height:300px;
+    }
 }
